--- a/library.properties
+++ b/library.properties
@@ -4,6 +4,6 @@ author=SwissHandmade
 maintainer=Oli <olivier.chatelain@gmail.com>
 sentence=A collection of samples to use with the Arduino
 paragraph=A collection of samples to use with the Arduino
-category=Examples
+category=Other
 url=https://github.com/chatelao/SwissHandmade_Arduino-Examples
 architectures=*
