--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=Swiss Handmade Arduino Examples
+name=SwissHandmade Examples
 version=1.0.0
 author=SwissHandmade
 maintainer=Oli <olivier.chatelain@gmail.com>
